--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 # before_deploy:
 deploy:
   provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
   on:
     branch: master
