--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,20 @@
 language: node_js
-node_js
--14.17.0
-cache: npm
+node_js:
+  - "v14.17.0"
+# cache: npm
 
-# before_install:
-install:
-  - npm ci
-#   - npm i -g
-# before_script:
-script:
-  - npm test
-  - npm run build
-# after_success:
-# after_failure:
-# after_script:
-# before_deploy:
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  on:
-    branch: master
+# # before_install:
+# install:
+#   - npm ci
+# #   - npm i -g
+# # before_script:
+# script:
+#   - npm test
+#   - npm run build
+# deploy:
+#   provider: pages
+#   skip_cleanup: true
+#   github_token: $GITHUB_TOKEN
+#   on:
+    # branch: master
+
