--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "npm",
+  "name": "app",
   "version": "1.0.0",
-  "description": "",
+  "description": "my app",
   "main": "home.js",
   "scripts": {
     "test": "jest",
