--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app",
+  "name": "teams-app",
   "version": "1.0.0",
-  "description": "my app",
+  "description": "App Dev 3",
   "main": "home.js",
   "scripts": {
     "test": "jest",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ci": "^2.1.1",
     "express": "4.17.1"
   },
   "devDependencies": {
