--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "appService.defaultWebAppToDeploy": "/subscriptions/d02edbcc-c970-4eb0-8956-ae8b661119d0/resourceGroups/DiovoApp/providers/Microsoft.Web/sites/diovoapp",
-    "appService.deploySubpath": "."
+    "appService.deploySubpath": ".",
+    "staticWebApps.appSubpath": "/",
+    "staticWebApps.apiSubpath": "",
+    "staticWebApps.outputSubpath": "",
+    "appService.defaultWebAppToDeploy": "/subscriptions/d02edbcc-c970-4eb0-8956-ae8b661119d0/resourceGroups/DiovoApp/providers/Microsoft.Web/sites/thisapp"
 }
