--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "main": "home.js",
   "scripts": {
     "test": "jest",
-    "start": "node index"
+    "start": "nodemon home"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ci": "^2.1.1",
-    "express": "4.17.1"
+    "ejs": "^3.1.6",
+    "express": "4.17.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
+    "mssql": "^7.1.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
-    "jest": "^27.0.4"
+    "dotenv": "^10.0.0",
+    "jest": "^27.0.4",
+    "nodemon": "^2.0.7"
   }
 }
